# m3cp

./: .env.example  .gitignore  README.md  implementation-details.md  multimodal_mcp_server.py  pyproject.toml
docs/: m3cp-manual.md
multimodal_mcp/: __init__.py  config.py  errors.py  fileref.py  logging_utils.py  main.py  openai_client.py  schemas.py  server.py
prompts/: SPEC-001-Base generation.md
tests/: test_fileref.py  test_live_integration.py  test_tools_contracts.py
